--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ gdelozie/
 jsipahio/hw2
 jsipahio/data/
 jsipahio/hw3
+jsipahio/hw4/
+jsipahio/hw5/
+jsipahio/hw6/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
